--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <!------- HEADER AND NAVIGATION BAR SETTINGS-------------->
-    <div class="logo"><img src="/Multicoloured Logo.svg" alt="Logo"></div>
+    <div class="logo"><img src="../Multicoloured Logo.svg" alt="Logo"></div>
     <nav>
       <ul>
         <li id="about">About Me</li>
